--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phoebe</title>
+    <title>Phoebe Wei | personal website</title>
 
     <!-- Favicons -->
     <link href="assets/img/favicon.png" rel="icon">
@@ -27,8 +27,8 @@
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
     <style>
-        .setin-magin-right-zero{
-            margin-right:0;
+        .setin-magin-right-zero {
+            margin-right: 0;
         }
     </style>
 </head>
@@ -49,13 +49,13 @@
                     <li><a class="active" href="index.html">Home</a></li>
                     <li><a href="resume.html">Resume</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <!-- <li><a href="contact.html">Contact</a></li> -->
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav><!-- .navbar -->
 
             <div class="header-social-links">
-                <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+                <a href="https://github.com/Phoebe130?tab=repositories" target="_blank" class="linkedin"><i class="bi bi-github"></i></i></a>
             </div>
 
         </div>
@@ -80,34 +80,27 @@
                         <img src="assets/img/Phoebe-samsung.png" class="img-fluid" alt="">
                     </div>
                     <div class="col-lg-8 pt-4 pt-lg-0 content">
-                        <h3>前端工程師 Junior Frontend Engineer</h3>
-                        <!-- <p class="fst-italic">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore
-                            magna aliqua.
-                        </p> -->
+                        <h4>前端工程師</h4>
+                        <h3>Junior Front-end Engineer</h3>
+                        <!-- <p class="fst-italic">Lorem ipsum dolor sit ametaliqua.</p> -->
                         <div class="row">
                             <div class="col-lg-6">
                                 <ul>
                                     <li><i class="bi bi-rounded-right"></i> <strong>生日:</strong> 30 Jan 1996</li>
-                                    <!-- <li><i class="bi bi-rounded-right"></i> <strong>:</strong> www.example.com -->
-                                    </li>
-                                    <!-- <li><i class="bi bi-rounded-right"></i> <strong>Phone:</strong> +123 456 7890</li> -->
-                                    <li><i class="bi bi-rounded-right"></i> <strong>居住地:</strong> 台中
+                                    <li><i class="bi bi-rounded-right"></i> <strong>居住地:</strong> 台中</li>  
+                                    <li><i class="bi bi-rounded-right"></i> <strong>Email:</strong>
+                                        bebow850130@gmail.com
                                     </li>
                                 </ul>
                             </div>
-                            <div class="col-lg-6">
+                            <!-- <div class="col-lg-6">
                                 <ul>
-                                    <!-- <li><i class="bi bi-rounded-right"></i> <strong>Age:</strong> 26</li> -->
-                                    <li><i class="bi bi-rounded-right"></i> <strong>最高學歷:</strong> 大學</li>
-                                    <li><i class="bi bi-rounded-right"></i> <strong>Email:</strong> bebow850130@gmail.com
+                                    <li><i class="bi bi-rounded-right"></i> <strong>Email:</strong>
+                                        bebow850130@gmail.com
                                     </li>
-                                    <!-- <li><i class="bi bi-rounded-right"></i> <strong>Freelance:</strong> Available</li> -->
                                 </ul>
-                            </div>
+                            </div> -->
                         </div>
-                        <!-- <p> -->
                         <ul>
                             <li>- 勇於嘗試跨領域挑戰，透過逢甲大學的[ 前端 UI 與 JS 框架(Vue)工程師 ] 400小時課程
                             </li>
@@ -116,7 +109,6 @@
                             <li>- 邏輯能力良好、學習速度快，做事細心負責有條理</li>
                             <li>- 工作態度經常受到主管、同事的好評</li>
                         </ul>
-                        </p>
                     </div>
                 </div>
 
@@ -173,7 +165,7 @@
                 <div class="row justify-content-center">
                     <div class="col-sm-12 col-md-6 col-xl-6">
                         <div class="card" style="width: 18rem;">
-                            <img src="./assets/img/Selling.jpg" class="card-img-top" alt="...">
+                            <img src="./assets/img/license/Selling.jpg" class="card-img-top" alt="Selling">
                             <div class="card-body">
                                 <p class="card-text">英國City&Guild國際行銷管理師</p>
                             </div>
@@ -181,7 +173,7 @@
                     </div>
                     <div class="col-sm-12 col-md-6 col-xl-6">
                         <div class="card" style="width: 18rem;">
-                            <img src="./assets/img/CustomerService.jpg" class="card-img-top" alt="...">
+                            <img src="./assets/img/license/CustomerService.jpg" class="card-img-top" alt="CustomerService">
                             <div class="card-body">
                                 <p class="card-text">英國City&Guild顧客關係管理師</p>
                             </div>
@@ -194,7 +186,7 @@
         <footer id="footer">
             <div class="container">
                 <div class="copyright">
-                    &copy; Copyright <strong><span>Phoebe</span></strong>. All Rights Reserved
+                    &copy; Copyright <strong><span>Phoebe Wei</span></strong>. All Rights Reserved
                 </div>
                 <div class="credits">
                     <!-- All the links in the footer should remain intact. -->
