--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio - Phoebe </title>
+  <title>Portfolio - Phoebe Wei </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -50,13 +50,12 @@
           <li><a href="index.html">Home</a></li>
          <li><a href="resume.html">Resume</a></li>
           <li><a class="active" href="portfolio.html">Portfolio</a></li>
-          <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
       <div class="header-social-links">
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+        <a href="https://github.com/Phoebe130?tab=repositories" target="_blank" class="linkedin"><i class="bi bi-github"></i></i></a>
       </div>
 
     </div>
@@ -130,7 +129,7 @@
 
           <div class="col-lg-5 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/weatherAPI.png" alt="天氣卡片" class="img-fluid">
+              <img src="assets/img/portfolio/weatherAPI.png" alt="天氣卡片" class="img-fluid">
               <div class="portfolio-info">
                 <h4>weatherAPI</h4>
                 <p>HTML & CSS & JavaScript</p>
@@ -143,7 +142,7 @@
           
           <div class="col-lg-6 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/colorguess.png" alt="色弱遊戲" class="img-fluid">
+              <img src="assets/img/portfolio/colorguess.png" alt="色弱遊戲" class="img-fluid">
               <div class="portfolio-info">
                 <h4>Color guess</h4>
                 <p>HTML & CSS & JavaScript</p>
@@ -167,7 +166,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Kelly</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Phoebe Wei</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
