--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Resume - Phoebe </title>
+    <title>Resume - Phoebe Wei </title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -52,16 +52,12 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a class="active" href="resume.html">Resume</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="contact.html">Contact</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav><!-- .navbar -->
 
             <div class="header-social-links">
-                <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-                <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-                <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-                <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+                <a href="https://github.com/Phoebe130?tab=repositories" target="_blank" class="linkedin"><i class="bi bi-github"></i></i></a>
             </div>
 
         </div>
@@ -76,7 +72,7 @@
                 <!-- data-aos="fade-up"> -->
 
                 <div class="section-title">
-                    <h2>履歷</h2>
+                    <h2>RESUME</h2>
                     <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
                 </div>
 
@@ -90,8 +86,7 @@
                             <p>
                                 學習網頁前端語言 HTML標籤應用、CSS的屬性效果、JavaScript、Sass/SCSS語法、VueJS、Bootstrap
                             </p>
-                            <p><em>萌生轉職的念頭乃因於從疫情爆發至今，觀察到資訊與生活相關程度越來越高，前端人才需求增加，未來發展前景廣闊，因此我認為軟體工程師是轉職的好領域。除了從線上平台自學以外，也積極參加【前端
-                                    UI 與 JS 框架(Vue)工程師 】培訓班，增進網頁切板與程式語言的能力，並累積個人作品集及團體協作網站架設。</em></p>
+                            <p><em>從疫情爆發至今，觀察到前端人才需求增加，未來發展廣闊，因此我認為軟體工程師是轉職的好領域。除了從線上平台自學以外，也積極參加【前端 UI 與 JS 框架(Vue)工程師 】培訓班，增進網頁切板與程式語言的能力，並累積個人作品集及團體協作網站架設。</em></p>
                             <!-- <p>
               <ul>
                 <li>Portland par 127,Orlando, FL</li>
@@ -180,7 +175,7 @@
     <footer id="footer">
         <div class="container">
             <div class="copyright">
-                &copy; Copyright <strong><span>Phoebe</span></strong>. All Rights Reserved
+                &copy; Copyright <strong><span>Phoebe Wei</span></strong>. All Rights Reserved
             </div>
             <div class="credits">
                 <!-- All the links in the footer should remain intact. -->
