--- a/index.html
+++ b/index.html
@@ -2,201 +2,228 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phoebe Wei | personal website</title>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon">
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <title>Phoebe Wei | personal website</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
 
-    <!-- Google Fonts -->
-    <link
-        href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-        rel="stylesheet">
+  <!-- Favicons -->
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-    <!-- Vendor CSS Files -->
-    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
-    <!-- Template Main CSS File -->
-    <link href="assets/css/style.css" rel="stylesheet">
-    <style>
-        .setin-magin-right-zero {
-            margin-right: 0;
-        }
-    </style>
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+  <!-- Template Main CSS File -->
+  <link href="assets/css/style.css" rel="stylesheet">
+
+  <!-- =======================================================
+  * Template Name: Kelly - v4.9.1
+  * Template URL: https://bootstrapmade.com/kelly-free-bootstrap-cv-resume-html-template/
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
 </head>
 
 <body>
 
+  <!-- ======= Header ======= -->
+  <header id="header" class="fixed-top">
+    <div class="container-fluid d-flex justify-content-between align-items-center">
 
-    <!-- ======= Header ======= -->
-    <header id="header" class="fixed-top">
-        <div class="container-fluid d-flex justify-content-between align-items-center">
-            <h1 class="logo me-auto me-lg-0"><a href="index.html">Ling Zhen Wei, Phoebe</a></h1>
-            <!-- Uncomment below if you prefer to use an image logo -->
-            <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
+      <h1 class="logo me-auto me-lg-0"><a href="index.html">Ling Zhen Wei, Phoebe</a></h1>
+      <!-- Uncomment below if you prefer to use an image logo -->
+      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
-            <nav id="navbar" class="navbar order-last order-lg-0">
-                <ul>
-                    <!-- <li><a href="index.html">Home</a></li> -->
-                    <li><a class="active" href="index.html">Home</a></li>
-                    <li><a href="resume.html">Resume</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <!-- <li><a href="contact.html">Contact</a></li> -->
-                </ul>
-                <i class="bi bi-list mobile-nav-toggle"></i>
-            </nav><!-- .navbar -->
+      <nav id="navbar" class="navbar order-last order-lg-0">
+        <ul>
+          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="resume.html">Resume</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+       
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav><!-- .navbar -->
 
-            <div class="header-social-links">
-                <a href="https://github.com/Phoebe130?tab=repositories" target="_blank" class="linkedin"><i class="bi bi-github"></i></i></a>
+      <div class="header-social-links">
+        <a href="https://github.com/Phoebe130?tab=repositories" target="_blank" class="linkedin"><i class="bi bi-github"></i></i></a>
+    </div>
+
+    </div>
+
+  </header><!-- End Header -->
+
+  <!-- ======= Hero Section ======= -->
+  <main id="main">
+
+    <!-- ======= About Section ======= -->
+    <section id="about" class="about">
+        <div class="container">
+            <!-- data-aos="fade-up" -->
+
+            <div class="section-title">
+                <h2>About</h2>
+                <!-- <p>- 勇於嘗試跨領域挑戰，透過逢甲大學的[ 前端 UI 與 JS 框架(Vue)工程師 ] 400小時課程，培養個人的一技之長。目前正尋找相關機會從事網頁設計與前端工程師一職。
+                    - 曾任職微積分專任助教、補習班數學老師、財務會計。
+                    - 邏輯能力良好、學習速度快，做事細心負責有條理。
+                    - 具備發現問題與解決問題的能力，工作態度經常受到主管、</p> -->
+            </div>
+
+            <div class="row">
+                <div class="col-lg-4">
+                    <img src="assets/img/Phoebe-samsung.png" class="img-fluid" alt="">
+                </div>
+                <div class="col-lg-8 pt-4 pt-lg-0 content">
+                    <h4>前端工程師</h4>
+                    <h3>Junior Front-end Engineer</h3>
+                    <!-- <p class="fst-italic">Lorem ipsum dolor sit ametaliqua.</p> -->
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <ul>
+                                <li><i class="bi bi-rounded-right"></i> <strong>生日:</strong> 30 Jan 1996</li>
+                                <li><i class="bi bi-rounded-right"></i> <strong>居住地:</strong> 台中</li>  
+                                <li><i class="bi bi-rounded-right"></i> <strong>Email:</strong>
+                                    bebow850130@gmail.com
+                                </li>
+                            </ul>
+                        </div>
+                        <!-- <div class="col-lg-6">
+                            <ul>
+                                <li><i class="bi bi-rounded-right"></i> <strong>Email:</strong>
+                                    bebow850130@gmail.com
+                                </li>
+                            </ul>
+                        </div> -->
+                    </div>
+                    <ul>
+                        <li>- 勇於嘗試跨領域挑戰，透過逢甲大學的[ 前端 UI 與 JS 框架(Vue)工程師 ] 400小時課程
+                        </li>
+                        <li>- 具備網頁版面切版、RWD響應式網頁設計、API串接相關技能</li>
+                        <li>- 曾任職微積分專任助教、補習班數學老師、財務會計</li>
+                        <li>- 邏輯能力良好、學習速度快，做事細心負責有條理</li>
+                        <li>- 工作態度經常受到主管、同事的好評</li>
+                    </ul>
+                </div>
             </div>
 
         </div>
-    </header><!-- End Header -->
-    <main id="main">
+    </section><!-- End About Section -->
+    <!-- ======= Skills Section ======= -->
+    <!-- <section id="skills" class="skills">
+<div class="container">  
+     data-aos="fade-up" -->
 
-        <!-- ======= About Section ======= -->
-        <section id="about" class="about">
-            <div class="container">
-                <!-- data-aos="fade-up" -->
+    <section id="skills" class="skills">
+        <div class="section-title">
+            <h2>專長與技能</h2>
+            <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
+        </div>
 
-                <div class="section-title">
-                    <h2>About</h2>
-                    <!-- <p>- 勇於嘗試跨領域挑戰，透過逢甲大學的[ 前端 UI 與 JS 框架(Vue)工程師 ] 400小時課程，培養個人的一技之長。目前正尋找相關機會從事網頁設計與前端工程師一職。
-                        - 曾任職微積分專任助教、補習班數學老師、財務會計。
-                        - 邏輯能力良好、學習速度快，做事細心負責有條理。
-                        - 具備發現問題與解決問題的能力，工作態度經常受到主管、</p> -->
+        <div class="container setin-magin-right-zero">
+            <div class="row align-items-start">
+                <div class="col-md-4 col-sm-12">
+                    語言
+                    <ul>
+                        <li>HTML5</li>
+                        <li>CSS3</li>
+                        <li>JavaScript</li>
+                    </ul>
                 </div>
-
-                <div class="row">
-                    <div class="col-lg-4">
-                        <img src="assets/img/Phoebe-samsung.png" class="img-fluid" alt="">
-                    </div>
-                    <div class="col-lg-8 pt-4 pt-lg-0 content">
-                        <h4>前端工程師</h4>
-                        <h3>Junior Front-end Engineer</h3>
-                        <!-- <p class="fst-italic">Lorem ipsum dolor sit ametaliqua.</p> -->
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <ul>
-                                    <li><i class="bi bi-rounded-right"></i> <strong>生日:</strong> 30 Jan 1996</li>
-                                    <li><i class="bi bi-rounded-right"></i> <strong>居住地:</strong> 台中</li>  
-                                    <li><i class="bi bi-rounded-right"></i> <strong>Email:</strong>
-                                        bebow850130@gmail.com
-                                    </li>
-                                </ul>
-                            </div>
-                            <!-- <div class="col-lg-6">
-                                <ul>
-                                    <li><i class="bi bi-rounded-right"></i> <strong>Email:</strong>
-                                        bebow850130@gmail.com
-                                    </li>
-                                </ul>
-                            </div> -->
-                        </div>
-                        <ul>
-                            <li>- 勇於嘗試跨領域挑戰，透過逢甲大學的[ 前端 UI 與 JS 框架(Vue)工程師 ] 400小時課程
-                            </li>
-                            <li>- 具備網頁版面切版、RWD響應式網頁設計、API串接相關技能</li>
-                            <li>- 曾任職微積分專任助教、補習班數學老師、財務會計</li>
-                            <li>- 邏輯能力良好、學習速度快，做事細心負責有條理</li>
-                            <li>- 工作態度經常受到主管、同事的好評</li>
-                        </ul>
-                    </div>
+                <div class="col-md-4 col-sm-12">
+                    框架
+                    <ul>
+                        <li>Bootstrap</li>
+                        <li>VueJs</li>
+                    </ul>
                 </div>
-
-            </div>
-        </section><!-- End About Section -->
-        <!-- ======= Skills Section ======= -->
-        <!-- <section id="skills" class="skills">
-    <div class="container">  
-         data-aos="fade-up" -->
-
-        <section id="skills" class="skills">
-            <div class="section-title">
-                <h2>專長與技能</h2>
-                <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
-            </div>
-
-            <div class="container setin-magin-right-zero">
-                <div class="row align-items-start">
-                    <div class="col-md-4 col-sm-12">
-                        語言
-                        <ul>
-                            <li>HTML5</li>
-                            <li>CSS3</li>
-                            <li>JavaScript</li>
-                        </ul>
-                    </div>
-                    <div class="col-md-4 col-sm-12">
-                        框架
-                        <ul>
-                            <li>Bootstrap</li>
-                            <li>VueJs</li>
-                        </ul>
-                    </div>
-                    <div class="col-md-4 col-sm-12">
-                        版本控制&軟體
-                        <ul>
-                            <li>Git</li>
-                            <li>GitHub</li>
-                        </ul>
-                    </div>
+                <div class="col-md-4 col-sm-12">
+                    版本控制&軟體
+                    <ul>
+                        <li>Git</li>
+                        <li>GitHub</li>
+                    </ul>
                 </div>
             </div>
-            </div>
-        </section><!-- End Skills Section -->
-        <!-- ======= 證照 Section ======= -->
+        </div>
+        </div>
+    </section><!-- End Skills Section -->
+    <!-- ======= 證照 Section ======= -->
 
 
-        <section id="skills" class="skills ">
-            <div class="section-title">
-                <h2>證照</h2>
-                <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
-            </div>
-            <div class="container setin-magin-right-zero">
-                <div class="row justify-content-center">
-                    <div class="col-sm-12 col-md-6 col-xl-6">
-                        <div class="card" style="width: 18rem;">
-                            <img src="./assets/img/license/Selling.jpg" class="card-img-top" alt="Selling">
-                            <div class="card-body">
-                                <p class="card-text">英國City&Guild國際行銷管理師</p>
-                            </div>
+    <section id="skills" class="skills ">
+        <div class="section-title">
+            <h2>證照</h2>
+            <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
+        </div>
+        <div class="container setin-magin-right-zero">
+            <div class="row justify-content-center">
+                <div class="col-sm-12 col-md-6 col-xl-6">
+                    <div class="card" style="width: 18rem;">
+                        <img src="./assets/img/license/Selling.jpg" class="card-img-top" alt="Selling">
+                        <div class="card-body">
+                            <p class="card-text">英國City&Guild國際行銷管理師</p>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-6 col-xl-6">
-                        <div class="card" style="width: 18rem;">
-                            <img src="./assets/img/license/CustomerService.jpg" class="card-img-top" alt="CustomerService">
-                            <div class="card-body">
-                                <p class="card-text">英國City&Guild顧客關係管理師</p>
-                            </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-xl-6">
+                    <div class="card" style="width: 18rem;">
+                        <img src="./assets/img/license/CustomerService.jpg" class="card-img-top" alt="CustomerService">
+                        <div class="card-body">
+                            <p class="card-text">英國City&Guild顧客關係管理師</p>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
-        <!-- ======= Footer ======= -->
-        <footer id="footer">
-            <div class="container">
-                <div class="copyright">
-                    &copy; Copyright <strong><span>Phoebe Wei</span></strong>. All Rights Reserved
-                </div>
-                <div class="credits">
-                    <!-- All the links in the footer should remain intact. -->
-                    <!-- You can delete the links only if you purchased the pro version. -->
-                    <!-- Licensing information: https://bootstrapmade.com/license/ -->
-                    <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/kelly-free-bootstrap-cv-resume-html-template/ -->
-                    Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-                </div>
-            </div>
-        </footer><!-- End  Footer -->
+        </div>
+    </section>
+
+</main>
+  
+  
+  
+  <!-- End Hero -->
+
+  <!-- ======= Footer ======= -->
+  <footer id="footer">
+    <div class="container">
+      <div class="copyright">
+        &copy; Copyright <strong><span>Kelly</span></strong>. All Rights Reserved
+      </div>
+      <div class="credits">
+        <!-- All the links in the footer should remain intact. -->
+        <!-- You can delete the links only if you purchased the pro version. -->
+        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/kelly-free-bootstrap-cv-resume-html-template/ -->
+        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+      </div>
+    </div>
+  </footer><!-- End  Footer -->
+
+  <div id="preloader"></div>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+
+  <!-- Template Main JS File -->
+  <script src="assets/js/main.js"></script>
 
 </body>
 
