--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
 
         <div class="container setin-magin-right-zero">
             <div class="row align-items-start">
-                <div class="col-md-4 col-sm-12">
-                    語言
+                <div class="col-md-4 col-sm-12 m-auto">
+                    <h6>語言</h6>
                     <ul>
                         <li>HTML5</li>
                         <li>CSS3</li>
@@ -140,14 +140,14 @@
                     </ul>
                 </div>
                 <div class="col-md-4 col-sm-12">
-                    框架
+                    <h6>框架</h6>
                     <ul>
                         <li>Bootstrap</li>
                         <li>VueJs</li>
                     </ul>
                 </div>
                 <div class="col-md-4 col-sm-12">
-                    版本控制&軟體
+                    <h6>版本控制&軟體</h6>
                     <ul>
                         <li>Git</li>
                         <li>GitHub</li>
@@ -155,7 +155,7 @@
                 </div>
             </div>
         </div>
-        </div>
+       
     </section><!-- End Skills Section -->
     <!-- ======= 證照 Section ======= -->
 
