--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+
+  <!-- <style>
+      .setin-magin-right-zero{
+        width: 631px;
+        margin-left: 119px;
+      }
+  </style> -->
 </head>
 
 <body>
@@ -129,7 +136,41 @@
             <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
-        <div class="container setin-magin-right-zero">
+        <div class="setin-magin-right-zero">
+          <table class="table table-borderless ">
+            <thead>
+              <tr>
+                <th scope="col"></th>
+                <th scope="col">語言</th>
+                <th scope="col">框架</th>
+                <th scope="col">版本控制&軟體</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row"></th>
+                <td>HTML5</td>
+                <td>Bootstrap</td>
+                <td>Git</td>
+              </tr>
+              <tr>
+                <th scope="row"></th>
+                <td>CSS3 SCSS</td>
+                <td>Vue.js</td>
+                <td>GitHub</td>
+              </tr>
+              <tr>
+                <th scope="row"></th>
+                <td>JavaScript</td>
+                <!-- <td colspan="2">JavaScript</td> -->
+            
+              </tr>
+            </tbody>
+          </table>
+        </div>
+
+
+        <!-- <div class="container setin-magin-right-zero">
             <div class="row align-items-start">
                 <div class="col-md-4 col-sm-12 m-auto">
                     <h6>語言</h6>
@@ -139,22 +180,8 @@
                         <li>JavaScript</li>
                     </ul>
                 </div>
-                <div class="col-md-4 col-sm-12">
-                    <h6>框架</h6>
-                    <ul>
-                        <li>Bootstrap</li>
-                        <li>VueJs</li>
-                    </ul>
-                </div>
-                <div class="col-md-4 col-sm-12">
-                    <h6>版本控制&軟體</h6>
-                    <ul>
-                        <li>Git</li>
-                        <li>GitHub</li>
-                    </ul>
-                </div>
             </div>
-        </div>
+        </div> -->
        
     </section><!-- End Skills Section -->
     <!-- ======= 證照 Section ======= -->
