--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
             <div class="row">
                 <div class="col-lg-4">
-                    <img src="assets/img/Phoebe-samsung.png" class="img-fluid" alt="">
+                    <img src="assets/img/mepic1.jpg" class="img-fluid img-thumbnail" alt="">
                 </div>
                 <div class="col-lg-8 pt-4 pt-lg-0 content">
                     <h4>前端工程師</h4>
