--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
                         </div> -->
                     </div>
                     <ul>
-                        <li>- 勇於嘗試跨領域挑戰，透過逢甲大學的[ 前端 UI 與 JS 框架(Vue)工程師 ] 400小時課程
+                      <li>- 透過自學和參加培訓課程轉職為Flutter開發工程師</li>
+                        <li>- 培訓課程：逢甲大學[ 前端 UI 與 JS 框架(Vue)工程師 ] 400小時
                         </li>
                         <li>- 具備網頁版面切版、RWD響應式網頁設計、API串接相關技能</li>
                         <li>- 曾任職微積分專任助教、補習班數學老師、財務會計</li>
@@ -149,19 +150,20 @@
             <tbody>
               <tr>
                 <th scope="row"></th>
-                <td>HTML5</td>
+                <td>HTML5 CSS3 SCSS</td>
                 <td>Bootstrap</td>
                 <td>Git</td>
               </tr>
               <tr>
                 <th scope="row"></th>
-                <td>CSS3 SCSS</td>
+                <td>JavaScript</td>
                 <td>Vue.js</td>
                 <td>GitHub</td>
               </tr>
               <tr>
                 <th scope="row"></th>
-                <td>JavaScript</td>
+                <td>Flutter</td>
+                <td>Angular</td>
                 <!-- <td colspan="2">JavaScript</td> -->
             
               </tr>
