--- a/resume.html
+++ b/resume.html
@@ -114,15 +114,28 @@
                             <h4>亞大管理學院國際志工服務隊</h4>
                             <h5>2017</h5>
                             <h4>韓國語文社</h4>
-                            <h5>2017 - 2018</h5>
+                            <h5>2016 - 2018</h5>
                             <h4>貝達那卡羅浮群</h4>
-                            <h5>2014 - 2015</h5>
+                            <h5>2014 - 2016</h5>
                             <h4>國企系系學會</h4>
-                            <h5>2014 - 2015</h5>
+                            <h5>2014 - 2016</h5>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <h3 class="resume-title">經歷</h3>
+                        <div class="resume-item">
+                            <h4>Flutter前端開發工程師</h4>
+                            <h5>2022 - 2023</h5>
+                            <p>
+                            <ul>
+                                <li>APP開發、分析、設計及程式撰寫。</li>
+                                <li>專案規劃執行，軟體架構及模組之設計。</li>
+                                <li>控管軟體設計、開發、測試進度。</li>
+                                <li>與後端工程師配合，串接API，完成產品開發。
+                                </li>
+                            </ul>
+                            </p>
+                        </div>
                         <div class="resume-item">
                             <h4>財務會計</h4>
                             <h5>2021 - 2022</h5>
