更新resume產業新尖兵

--- a/resume.html
+++ b/resume.html
@@ -57,7 +57,8 @@
             </nav><!-- .navbar -->
 
             <div class="header-social-links">
-                <a href="https://github.com/Phoebe130?tab=repositories" target="_blank" class="linkedin"><i class="bi bi-github"></i></i></a>
+                <a href="https://github.com/Phoebe130?tab=repositories" target="_blank" class="linkedin"><i
+                        class="bi bi-github"></i></i></a>
             </div>
 
         </div>
@@ -78,15 +79,20 @@
 
                 <div class="row">
                     <div class="col-lg-6">
+
                         <h3 class="resume-title">「如果安於現狀，生命就會失去應有的熱情。」
                         </h3>
+                        <div class="resume-item">
+                            <h4>產業新尖兵 - Figma UI/UX與Vue.js前端培訓班</h4>
+                            <h5>2023 Oct - 2024 Jan</h5>
+                            <p>為了更全面地理解前端開發並提升使用者體驗，我主動參加了Figma和Vue.js的培訓。增進網頁切板與程式語言的能力，並累積個人作品集及團體協作網站架設。不僅加強了我的UI/UX設計能力，還提升了我在Vue.js框架下構建網頁應用的能力。</p>
+                        </div>
+
                         <div class="resume-item pb-0">
-                            <h4>逢甲大學前端 UI 與 JS 框架(Vue)工程師培訓班</h4>
+                            <h4>逢甲大學前端 UI 與 JavaScript 工程師培訓班</h4>
                             <h5>2022 Aug - Nov</h5>
-                            <p>
-                                學習網頁前端語言 HTML標籤應用、CSS的屬性效果、JavaScript、Sass/SCSS語法、VueJS、Bootstrap
-                            </p>
-                            <p><em>從疫情爆發至今，觀察到前端人才需求增加，未來發展廣闊，因此我認為軟體工程師是轉職的好領域。除了從線上平台自學以外，也積極參加【前端 UI 與 JS 框架(Vue)工程師 】培訓班，增進網頁切板與程式語言的能力，並累積個人作品集及團體協作網站架設。</em></p>
+                            <p>從疫情爆發至今，觀察到前端人才需求增加，未來發展廣闊，因此我認為軟體工程師是轉職的好領域。除了從線上平台自學以外，也積極參加【前端 UI 與 JS 框架(Vue)工程師
+                                    】培訓班。</p>
                             <!-- <p>
               <ul>
                 <li>Portland par 127,Orlando, FL</li>
