fix index、resume content

--- a/index.html
+++ b/index.html
@@ -113,13 +113,11 @@
                         </div> -->
                     </div>
                     <ul>
-                      <li>- 透過自學和參加培訓課程轉職為Flutter開發工程師</li>
-                        <li>- 培訓課程：逢甲大學[ 前端 UI 與 JS 框架(Vue)工程師 ] 400小時
-                        </li>
+                      <li>- 參加 2023.10 產業新尖兵[Figma UI/UX & Vue.js] 四個月前端培訓課程</li>
+                      <li>- 從國際企業學系，經培訓班轉職 Flutter 開發工程師</li>
+                      <li>- 曾任職微積分專任助教、補習班數學老師、財務會計</li>
+                        <li>- 參加 2022.08 逢甲大學[前端 UI 與 JS 框架(Vue)工程師]400小時</li>
                         <li>- 具備網頁版面切版、RWD響應式網頁設計、API串接相關技能</li>
-                        <li>- 曾任職微積分專任助教、補習班數學老師、財務會計</li>
-                        <li>- 邏輯能力良好、學習速度快，做事細心負責有條理</li>
-                        <li>- 工作態度經常受到主管、同事的好評</li>
                     </ul>
                 </div>
             </div>
@@ -198,18 +196,18 @@
             <div class="row justify-content-center">
                 <div class="col-sm-12 col-md-6 col-xl-6">
                     <div class="card" style="width: 18rem;">
+                      <div class="card-body">
+                          <p class="card-text">英國City&Guild 國際行銷管理師</p>
+                      </div>
                         <img src="./assets/img/license/Selling.jpg" class="card-img-top" alt="Selling">
-                        <div class="card-body">
-                            <p class="card-text">英國City&Guild國際行銷管理師</p>
-                        </div>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-xl-6">
                     <div class="card" style="width: 18rem;">
+                      <div class="card-body">
+                          <p class="card-text">英國City&Guild 顧客關係管理師</p>
+                      </div>
                         <img src="./assets/img/license/CustomerService.jpg" class="card-img-top" alt="CustomerService">
-                        <div class="card-body">
-                            <p class="card-text">英國City&Guild顧客關係管理師</p>
-                        </div>
                     </div>
                 </div>
             </div>
