fix resume content

--- a/resume.html
+++ b/resume.html
@@ -80,19 +80,18 @@
                 <div class="row">
                     <div class="col-lg-6">
 
-                        <h3 class="resume-title">「如果安於現狀，生命就會失去應有的熱情。」
+                        <h3 class="resume-title">進修課程
                         </h3>
-                        <div class="resume-item">
+                        <div class="resume-item" >
                             <h4>產業新尖兵 - Figma UI/UX與Vue.js前端培訓班</h4>
-                            <h5>2023 Oct - 2024 Jan</h5>
-                            <p>為了更全面地理解前端開發並提升使用者體驗，我主動參加了Figma和Vue.js的培訓。增進網頁切板與程式語言的能力，並累積個人作品集及團體協作網站架設。不僅加強了我的UI/UX設計能力，還提升了我在Vue.js框架下構建網頁應用的能力。</p>
+                            <h5>2023 Oct - 2024 Feb<span style="margin-left: 20px;">500小時</span></h5>
+                            <p style="line-height: 35px;">為了更全面地理解前端開發並提升使用者體驗，我參加Figma和Vue.js的培訓。增進網頁切板與程式語言的能力，並累積個人作品集及團體協作網站架設。不僅加強了與UI/UX設計師溝通能力，還提升了我在Vue.js框架下構建網頁應用的技術能力。</p>
                         </div>
 
                         <div class="resume-item pb-0">
-                            <h4>逢甲大學前端 UI 與 JavaScript 工程師培訓班</h4>
-                            <h5>2022 Aug - Nov</h5>
-                            <p>從疫情爆發至今，觀察到前端人才需求增加，未來發展廣闊，因此我認為軟體工程師是轉職的好領域。除了從線上平台自學以外，也積極參加【前端 UI 與 JS 框架(Vue)工程師
-                                    】培訓班。</p>
+                            <h4>逢甲大學 前端 UI 與 JavaScript 工程師培訓班</h4>
+                            <h5>2022 Aug - Nov  <span style="margin-left: 20px;">400小時</span></h5> 
+                            <p style="line-height: 35px;">從疫情爆發至今，觀察到前端人才需求增加，未來發展廣闊，因此我認為軟體工程師是轉職的好領域。除了從線上平台自學以外，也參加【前端 UI 與 JS 框架(Vue)工程師】400小時培訓課程。</p>
                             <!-- <p>
               <ul>
                 <li>Portland par 127,Orlando, FL</li>
@@ -108,10 +107,12 @@
                             <h5>2014 - 2018</h5>
                             <!-- <p><em>GPA:4</em></p> -->
                             <p>GPA：4</p>
+                            <p style="line-height: 35px;">在學業之餘，我積極參與各項學術和社會活動，豐富了自己的學生生活。這段期間，我透過申請科技部大專生研究計畫，有幸深化了我的專業知識，進一步拓展了我的學術視野。這個研究計畫不僅讓我更深入地了解了相關領域的知識，還培養了我的研究能力和解決問題的能力。這些學習和經歷為我未來的職業發展打下了堅實的基礎，使我更加有信心面對未來的挑戰。</p>
                         </div>
                         <div class="resume-item">
                             <h4>管理學院行銷專技培訓班</h4>
                             <h5>2017</h5>
+                            <p style="line-height: 35px;">在亞洲大學國際企業學系學習期間，我也參與了行銷相關的學術課程和活動。透過參加行銷培訓班，學習市場分析、品牌管理、行銷策略等。我獲得了豐富的行銷知識和技能，尤其在市場定位、品牌建立和目標市場分析方面有所專長。</p>
                             <!-- <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
               <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p> -->
                         </div>
@@ -119,12 +120,17 @@
                         <div class="resume-item">
                             <h4>亞大管理學院國際志工服務隊</h4>
                             <h5>2017</h5>
+                            <p style="line-height: 35px;">在「亞大管理學院國際志工服務隊」的活動中，我有幸參與了前往香港的志工服務。在這次活動中，我們不僅去了養老院陪伴爺爺奶奶，還與智能障礙人士一起參與遊戲活動，並協助打包飯菜給需要關懷的人士。這些活動讓我深刻體會到了跨文化溝通的重要性，並學會了如何克服語言和文化上的障礙。同時，面對不同需求的志工任務，我培養了靈活應變的能力，並學會了有效的壓力管理和情感應對。這次志工活動不僅豐富了我的社會經驗，也提升了我的人際交往能力和團隊合作精神。</p>
                             <h4>韓國語文社</h4>
                             <h5>2016 - 2018</h5>
+                            <p style="line-height: 35px;">在參加韓國語文社的過程中，我不僅學習了韓國語言的基礎知識，還了解了韓國文化和生活方式。與此同時，我有幸與來自韓國的朋友進行了交流，這進一步豐富了我的學習體驗。</p>
                             <h4>貝達那卡羅浮群</h4>
                             <h5>2014 - 2016</h5>
+                            <p style="line-height: 35px;">在大羅浮其中一項活動是參與國小學生畢業晚會的籌備和執行。在這個過程中，我有機會與孩子們互動，並協助籌劃了一個難忘的活動，讓他們在畢業之際感受到溫馨和歡樂。這次經驗不僅讓我學會了組織和溝通的能力，還加深了我對社區服務的認識和對孩子們的關愛。</p>
                             <h4>國企系系學會</h4>
                             <h5>2014 - 2016</h5>
+                            <p style="line-height: 35px;">
+                                當我參與國際企業學系系學會期間，我踴躍參與了多項活動的規劃和組織工作。如烤肉聚餐、抽獎活動、大胃王比賽以及畢業送舊等。這些活動不僅拉近了系內同學的距離，也豐富了校園生活，同時也增強了我的團隊合作、組織策劃和活動執行能力。</p>
                         </div>
                     </div>
                     <div class="col-lg-6">
