fix portfolio link

--- a/portfolio.html
+++ b/portfolio.html
@@ -86,6 +86,97 @@
 
         <div class="row portfolio-container" >
 
+          <div class="col-lg-6 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/2024langlangthing.png" alt="浪浪的事首頁瀏覽圖" class="img-fluid">
+              <div class="portfolio-info">
+                <h4>浪浪的事網站改版</h4>
+                <p>HTML & CSS & JavaScript</p>
+                <div class="portfolio-links">
+                  <a href="https://112-10-fcu-langlang.dev-hub.io/" target="_blank" ><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/2022highlocandhenry.png" alt="西屯純愛組形象網站" class="img-fluid">
+              <div class="portfolio-info">
+                <h4>臺灣嘻哈團體-西屯純愛組形象網站</h4>
+                <p>HTML & CSS & JavaScript</p>
+                <div class="portfolio-links">
+                  <a href="https://phoebe130.github.io/Xitun.github.io/" target="_blank" ><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/2023microsoft-layout-imitate.jpg" alt="微軟官網首頁仿切" class="img-fluid">
+              <div class="portfolio-info">
+                <h4>微軟仿切</h4>
+                <p>HTML & CSS & JavaScript</p>
+                <div class="portfolio-links">
+                  <a href="https://phoebe130.github.io/Imitate-Microsoft-layout/" target="_blank" ><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/2023color-game.png" alt="色弱遊戲" class="img-fluid">
+              <div class="portfolio-info">
+                <h4>color game</h4>
+                <p>HTML & CSS & JavaScript</p>
+                <div class="portfolio-links">
+                  <a href="https://phoebe130.github.io/colorgame/" target="_blank" ><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/2023hold-shift-to-check-multuple-heckboxes.jpg" alt="shift&check" class="img-fluid">
+              <div class="portfolio-info">
+                <h4>Hold Shift to Check Multiple Checkboxes</h4>
+                <p>HTML & CSS & JavaScript</p>
+                <div class="portfolio-links">
+                  <a href="https://phoebe130.github.io/hold-shift-and-checkboxes-JSday10/" target="_blank" ><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/2023US-cities-population.jpg" alt="動態篩選美國城市與州" class="img-fluid">
+              <div class="portfolio-info">
+                <h4>動態篩選美國城市與州</h4>
+                <p>HTML & CSS & JavaScript</p>
+                <div class="portfolio-links">
+                  <a href="https://phoebe130.github.io/US-Cities-Population-Search-JSday6/" target="_blank" ><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/2023Drum-kit.jpg" alt="JS Drum Kit" class="img-fluid">
+              <div class="portfolio-info">
+                <h4>JS Drum Kit</h4>
+                <p>HTML & CSS & JavaScript</p>
+                <div class="portfolio-links">
+                  <a href="https://phoebe130.github.io/Drum-Kit-JSday1/" target="_blank" ><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-6 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/carcolumn.png" alt="車子" class="img-fluid">
