fix info resume experience

--- a/index.html
+++ b/index.html
@@ -117,21 +117,9 @@
             </div>
 
             <p class="self-intro">
-
-              我是一位具有跨領域背景的前端開發者，透過參加逢甲大學的前端UI與JS框架(Vue)工程師400小時培訓轉職，而有了半年的Flutter開發工程師經驗。曾經任職微積分專任助教、補習班數學老師和財務會計，培養了解決問題和溝通的能力。
-
-              2023年10月我進一步參加產業新尖兵Figma UI/UX & Vue.js四個月前端培訓課程。這些培訓課程讓我熟練掌握了網頁版面切版、RWD響應式網頁設計以及API串接等相關技能。
-
-              我對於學習和挑戰自我的精神充滿熱情，願意將我的專業知識和技能應用於實際的專案中，為用戶提供卓越的網頁體驗。
-
+              我參加了Figma UI/UX &
+              Vue.js培訓課程以及前端UI與JavaScript工程師培訓班，從培訓班掌握了網頁版面切版、RWD響應式網頁設計以及API串接等相關技能。透過這些培訓以及自學的努力，轉職為Flutter開發工程師，任職期間負責開發APP內的會議記錄專案庫管理等介面，同時具備了團體開發的經驗。此外，我之前曾擔任微積分專任助教、補習班數學老師以及財務會計相關職位，這些經驗讓我具備了細心、耐心和負責任的特質。同事和主管都認為我學習速度快，能夠快速適應新環境和工作要求。我期待著能夠在貴公司貢獻我的專業知識和技能，並與團隊一起取得更大的成就。
             </p>
-            <!-- <ul>            
-                      <li>- 參加 2023.10 產業新尖兵[Figma UI/UX & Vue.js] 四個月前端培訓課程</li>
-                      <li>- 經培訓班轉職，而有半年的 Flutter 開發工程師經歷</li>
-                      <li>- 曾任職微積分專任助教、補習班數學老師、財務會計</li>
-                        <li>- 參加 2022.08 逢甲大學[前端 UI 與 JS 框架(Vue)工程師]400小時培訓</li>
-                        <li>- 具備網頁版面切版、RWD響應式網頁設計、API串接相關技能</li> 
-                    </ul>-->
           </div>
         </div>
 
