--- a/resume.html
+++ b/resume.html
@@ -83,15 +83,15 @@
                         <h3 class="resume-title">進修課程
                         </h3>
                         <div class="resume-item" >
-                            <h4>產業新尖兵 - Figma UI/UX與Vue.js前端培訓班</h4>
-                            <h5>2023 Oct - 2024 Feb<span style="margin-left: 20px;">500小時</span></h5>
+                            <h4>Figma UI/UX與Vue.js前端培訓班</h4>
+                            <!-- <h5>2023 Oct - 2024 Feb<span style="margin-left: 20px;">500小時</span></h5> -->
                             <p style="line-height: 35px;">為了更全面地理解前端開發並提升使用者體驗，我參加Figma和Vue.js的培訓。增進網頁切板與程式語言的能力，並累積個人作品集及團體協作網站架設。不僅加強了與UI/UX設計師溝通能力，還提升了我在Vue.js框架下構建網頁應用的技術能力。</p>
                         </div>
 
                         <div class="resume-item pb-0">
                             <h4>逢甲大學 前端 UI 與 JavaScript 工程師培訓班</h4>
-                            <h5>2022 Aug - Nov  <span style="margin-left: 20px;">400小時</span></h5> 
-                            <p style="line-height: 35px;">從疫情爆發至今，觀察到前端人才需求增加，未來發展廣闊，因此我認為軟體工程師是轉職的好領域。除了從線上平台自學以外，也參加【前端 UI 與 JS 框架(Vue)工程師】400小時培訓課程。</p>
+                            <!-- <h5>2022 Aug - Nov  <span style="margin-left: 20px;">400小時</span></h5>  -->
+                            <p style="line-height: 35px;">從疫情爆發以來，我便開始關注前端人才的需求趨勢，並意識到軟體工程師是一個具有廣闊發展前景的轉職選擇。因此除了從線上平台自學以外，我參加前端 UI 與 JS工程師培訓課程。在這個課程中，我學習了前端開發的基礎知識，包括HTML、CSS、JS，並初步了解Vue.js框架的使用。通過這個課程，我不僅掌握了前端開發的基本技能，還獲得了實際團體開發的經驗。</p>
                             <!-- <p>
               <ul>
                 <li>Portland par 127,Orlando, FL</li>
@@ -126,7 +126,7 @@
                             <p style="line-height: 35px;">在參加韓國語文社的過程中，我不僅學習了韓國語言的基礎知識，還了解了韓國文化和生活方式。與此同時，我有幸與來自韓國的朋友進行了交流，這進一步豐富了我的學習體驗。</p>
                             <h4>貝達那卡羅浮群</h4>
                             <h5>2014 - 2016</h5>
-                            <p style="line-height: 35px;">在大羅浮其中一項活動是參與國小學生畢業晚會的籌備和執行。在這個過程中，我有機會與孩子們互動，並協助籌劃了一個難忘的活動，讓他們在畢業之際感受到溫馨和歡樂。這次經驗不僅讓我學會了組織和溝通的能力，還加深了我對社區服務的認識和對孩子們的關愛。</p>
+                            <p style="line-height: 35px;">在羅浮群其中一項活動是參與國小學生畢業晚會的籌備和執行。在這個過程中，我有機會與孩子們互動，並協助籌劃了一個難忘的活動，讓他們在畢業之際感受到溫馨和歡樂。這次經驗不僅讓我學會了組織和溝通的能力，還加深了我對社區服務的認識和對孩子們的關愛。</p>
                             <h4>國企系系學會</h4>
                             <h5>2014 - 2016</h5>
                             <p style="line-height: 35px;">
